src/AntiDuplWPF/AntiDupl/AntiDupl.h



    typedef adInt32 adBool;

    typedef adBool* adBoolPtr;

    typedef size_t adSize;

    typedef adSize* adSizePtr;


    typedef wchar_t adCharW;

    typedef adStatistic* adStatisticPtr;

    typedef adStatusW* adStatusPtrW;

    typedef adImageInfoW* adImageInfoPtrW;

    typedef adResultW* adResultPtrW;

	typedef adGroup* adGroupPtr;

    typedef adBitmap* adBitmapPtr;

    DLLAPI adError adSearch();

    DLLAPI adError adLoadW(adFileType fileType, const adCharW* fileName, adBool check);

    DLLAPI adError adSaveW(adFileType fileType, const adCharW* fileName);

    DLLAPI adError adClear(adFileType fileType);


    DLLAPI adError adOptionsGet(adOptionsType optionsType, void* pOptions);

    DLLAPI adError adOptionsSet(adOptionsType optionsType, void* pOptions);


    DLLAPI adError adStatisticGet(adStatisticPtr pStatistic);

    DLLAPI adError adStatusGetW(adThreadType threadType, adSize threadId, adStatusPtrW pStatus);

    DLLAPI adError adResultGetW(adSizePtr pStartFrom, adResultPtrW pResult, adSizePtr pResultSize);

    DLLAPI adError adResultSort(adSortType sortType, adBool increasing);

    DLLAPI adError adCanApply(adActionEnableType actionEnableType, adBoolPtr pEnable);

    DLLAPI adError adRenameCurrentW(adRenameCurrentType renameCurrentType, const adCharW* newFileName);

	DLLAPI adError adMoveCurrentGroupW(const adCharW* directory);

	DLLAPI adError adRenameCurrentGroupAsW(const adCharW* fileName);


    DLLAPI adError adSelectionSet(adSizePtr pStartFrom, adSize size, adBool value);

    DLLAPI adError adSelectionGet(adSizePtr pStartFrom, adBoolPtr pSelection, adSizePtr pSelectionSize);

    DLLAPI adError adCurrentSet(adSize index);

    DLLAPI adError adCurrentGet(adSizePtr pIndex);


	DLLAPI adError adGroupGet(adSizePtr pStartFrom, adGroupPtr pGroup, adSizePtr pGroupSize);

	DLLAPI adError adImageInfoGetW(adSize groupId, adSizePtr pStartFrom, adImageInfoPtrW pImageInfo, adSizePtr pImageInfoSize);

	DLLAPI adError adImageInfoSelectionSet(adSize groupId, adSize index, adSelectionType selectionType);

	DLLAPI adError adImageInfoSelectionGet(adSize groupId, adSizePtr pStartFrom, adBoolPtr pSelection, adSizePtr pSelectionSize);

	DLLAPI adError adImageInfoRenameW(adSize groupId, adSize index, const adCharW* newFileName);

    DLLAPI adError adLoadBitmapW(const adCharW* fileName, adBitmapPtr pBitmap);